--- a/vignettes/tcgaBiolinks.Rmd
+++ b/vignettes/tcgaBiolinks.Rmd
@@ -1499,7 +1499,7 @@ query <- GDCquery(project = "TCGA-GBM",
                               "TCGA-12-0829-01A-01D-0392-05", "TCGA-06-0155-01B-01D-0521-05",
                               "TCGA-02-0099-01A-01D-0199-05", "TCGA-19-4068-01A-01D-1228-05",
                               "TCGA-19-1788-01A-01D-0595-05", "TCGA-16-0848-01A-01D-0392-05"))
-GDCdownload(query, method = "client")
+GDCdownload(query, method = "api")
 data <- GDCprepare(query)
 ```
 
@@ -1512,13 +1512,13 @@ query <- GDCquery(project = "TCGA-GBM",
                               "TCGA-12-0829-01A-01D-0392-05", "TCGA-06-0155-01B-01D-0521-05",
                               "TCGA-02-0099-01A-01D-0199-05", "TCGA-19-4068-01A-01D-1228-05",
                               "TCGA-19-1788-01A-01D-0595-05", "TCGA-16-0848-01A-01D-0392-05"))
-GDCdownload(query, method = "client")
+GDCdownload(query, method = "api")
 data <- GDCprepare(query)
 ```
 
 ```{r, echo=TRUE, fig.height=5, message=FALSE, warning=FALSE}
 # "shortLetterCode" is a column in the SummarizedExperiment::colData(data) matrix
-TCGAvisualize_meanMethylation(data,"shortLetterCode",filename = NULL)
+TCGAvisualize_meanMethylation(data, groupCol = "shortLetterCode",filename = NULL)
 ```
 The arguments of `TCGAvisualize_meanMethylation` are:
 
@@ -1542,15 +1542,19 @@ of the subgroups. Example: shapes = c(21,23) if for two levels
 Other examples using the parameters:
 ```{r, echo=TRUE, fig.height=5, message=FALSE, warning=FALSE}
 # setting y limits: lower 0, upper 1
-TCGAvisualize_meanMethylation(data,"shortLetterCode",filename = NULL, y.limits = c(0,1))
+TCGAvisualize_meanMethylation(data,groupCol = "shortLetterCode",filename = NULL, y.limits = c(0,1))
 # setting y limits: lower 0
-TCGAvisualize_meanMethylation(data,"shortLetterCode",filename = NULL, y.limits = 0)
+TCGAvisualize_meanMethylation(data,groupCol = "shortLetterCode",filename = NULL, y.limits = 0)
 # Changing shapes of jitters to show subgroups
-TCGAvisualize_meanMethylation(data,groupCol  = "gender", subgroupCol="vital_status", filename = NULL)
+TCGAvisualize_meanMethylation(data,
+                              groupCol  = "subtype_Pan.Glioma.DNA.Methylation.Cluster", 
+                              subgroupCol="vital_status", filename = NULL)
 # Sorting bars by descending mean methylation
-TCGAvisualize_meanMethylation(data,groupCol  = "gender",sort="mean.desc",filename=NULL)
+TCGAvisualize_meanMethylation(data,
+                              groupCol  = "subtype_Pan.Glioma.DNA.Methylation.Cluster",sort="mean.desc",filename=NULL)
 # Sorting bars by asc mean methylation
-TCGAvisualize_meanMethylation(data,groupCol  = "gender",sort="mean.asc",filename=NULL)
+TCGAvisualize_meanMethylation(data,groupCol  = "subtype_Pan.Glioma.DNA.Methylation.Cluster",
+                              sort="mean.asc",filename=NULL)
 TCGAvisualize_meanMethylation(data,groupCol  = "vital_status",sort="mean.asc",filename=NULL)
 ```
 
